# kaka-nest

./: .envrc  .gitignore  Cargo.toml  LICENSE  TODO.md  flake.nix
.cargo/: config.toml
assets/.obsidian/: workspace.json
assets/blog/: Adding syntax highlighting to my blog software.md  Ideas for database.md  Media server notes for school.md  Setting up a media server.md  adding syntax highlighting.md  example.md  test.md  test1..md  test1.md
assets/blog/.obsidian/: workspace.json
assets/templates/: base.html  blockquote.html  blog.html  codeblock.html  homepage.html  navbar.html  styles.html  tag_page.html
assets/templates/modules/: blockquote.html
crates/kaka-nest/: Cargo.toml
crates/kaka-nest/src/: build_page.rs  lib.rs  main.rs  util.rs
crates/pullmark_parsers/: Cargo.toml
crates/pullmark_parsers/src/: lib.rs
crates/server_view/: Cargo.toml
crates/server_view/src/: lib.rs
crates/shared_utils/: Cargo.toml
crates/shared_utils/src/: lib.rs
kaka-nest/: Cargo.toml
kaka-nest/src/: build_page.rs  discover.rs  lib.rs  main.rs  pullmark_parsers.rs  util.rs
src/: build_page.rs  get_markdown.rs  highlight.rs  main.rs  pullmark_parsers.rs  render_html.rs
