[package]
name = "kaka-nest"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
handlebars = "6.3.2"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"
