[workspace]
members = [
    "crates/pullmark_parsers",
    "crates/kaka-nest",
    "crates/shared_utils",
    "crates/server_view",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
handlebars = "6.3.2"
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
    "simd",
] }
actix-web = "4.11.0"

[profile.release]
debug = "full"
