[package]
name = "kaka-nest"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
pulldown-cmark.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tracing.workspace = true
actix-web.workspace = true
tracing-subscriber.workspace = true
shared_utils = { path = "../shared_utils" }
pullmark_parsers = { path = "../pullmark_parsers" }
server_view = { path = "../server_view" }
rss = "2.0.12"
lol_html = "2.6.0"
slugify = "0.1.0"
fs_extra = "1.3.0"
